2003-02-09 18:02  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/GSLayoutManager_internal.h,
	Source/GSLayoutManager.m, Source/NSLayoutManager.m: Add
	-_didInvalidateLayout method that is called whenever any layout
	information has been invalidated. Use it in NSLayoutManager to
	resize text views.

2003-02-09 15:23  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTextView_actions.m: Fix several movement actions (used
	to move from the wrong end of the selected range, or mixed glyphs
	and characters).

2003-02-09 14:48  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSHorizontalTypesetter.m: Make the main method reentrant
	by having it allocate a temporary instance to handle calls when
	it is already in use.

2003-02-09  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSColorList.m
	[_loadAvailableColorLists] check if a directory exists before
	looking for a colour list in it.

2003-02-08 22:56  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTextView_actions.m (-lowerBaseline:): Change the correct
	attribute.

	(-turnOffLigatures:, -useStandardLigatures:): Correct the attribute
	changes.

2003-02-08 22:53  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSFontInfo.m (-defaultLineHeightForFont),
	Source/GSHorizontalTypesetter.m (-layoutLineNewParagraph:): Improve
	calculation of line height and make it match the baseline calculation
	when typesetting.

2003-02-08 22:29  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSWindow.m (-sendEvent:): On right mouse down, check if
	the view that is hit has a pop-up menu, and if so, display it
	instead of sending the event to the view. Based on patch from
	Matt Rice.

2003-02-08 17:51  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/NSLayoutManager.h, Source/NSLayoutManager.m:
	Add -characterIndexMoving:fromCharacterIndex:originalCharacterIndex:
	distance: method.

	* Source/NSTextView.m: Keep track of the selection affinity.
